K1J-1952: Apply Spotless code formatting